# crop-yield-datascience-fullstack

./: README.md  alembic.ini  pyproject.toml  test.ipynb
alembic/: env.py
alembic/versions/: 7f7cec7df4de_create_countryboundaries_table.py  c9ab45c37359_add_country_iso3_id_in_.py  f88f69337b2b_create_faocountrycropyield_table.py
data/: FAOSTAT_data_en_5-8-2025.csv
data/processed/: country_boundaries.csv  country_crop_yield.csv  nasa_power_data.csv
data_engineering/etl/etls/: abstract.py  country_boundaries.py  fao.py  nasa_power.py
data_engineering/etl/extractors/: abstract.py  api_extractors.py  csv_extractors.py  shapely_extractors.py
data_engineering/etl/loaders/: abstract.py  csv_loaders.py  database_loaders.py
data_engineering/etl/transformers/: abstract.py  fao_transformers.py  nasa_power.py  natural_earth_country_boundaries.py
data_engineering/scripts/: create_db.sh
database/: engine.py  models.py
